New finished UI assets. Dart widgets new assets added. Pause menu skewed assets used. Dante now firmly on the floor. Changed rotation of rag socket. Logo in pause menu need to properly update it in the options menu will do after pulling.

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -832,7 +832,7 @@ ContentBrowserTab3.ThumbnailSize=2
 ContentBrowserTab3.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Maps/Test_Level/ThirdPersonMap
+LastLevel=/Game/Maps/Main_Level/Main_Level
 
 [ModuleFileTracking]
 Project_7_Sins.TimeStamp=2025.03.22-16.28.40
@@ -1926,7 +1926,7 @@ ClothingSystemEditorInterface.LastCompileMethod=Unknown
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
-Object="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object\" \"Object.Render Transform.RenderTransform\" "
 None=======
 None=======
 None=======
@@ -1950,9 +1950,9 @@ CameraComponent="\"Object\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
-MeshComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
-PrimitiveComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+PrimitiveComponent="\"Object\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 ShapeComponent="\"Object\" "
@@ -2197,9 +2197,9 @@ SplineComponent="\"Object\" "
 BP_Rat_Screw_Game_Manager_C="\"Object\" "
 MegascansMaterialParentSettings="\"Object\" "
 W_Winner_C="\"Object\" "
-UserWidget="\"Object\" "
-Widget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Render Transform.RenderTransform\" "
+UserWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object\" \"Object.Render Transform.RenderTransform\" "
 StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" "
 StreamableRenderAsset="\"Object\" "
 AssetViewerSettings="\"Object\" "
@@ -2222,8 +2222,8 @@ IDI Decide_3="\"Struct\" "
 WidgetComponent="\"Object\" "
 WidgetComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 SizeBox="\"Object\" \"Object.Render Transform.RenderTransform\" "
-ContentWidget="\"Object\" \"Object.Appearance.Background\" \"Object.Appearance.Background.ImageSize\" \"Object.Appearance.Background.Margin\" \"Object.Appearance.Background.OutlineSettings\" \"Object.Appearance.Background.OutlineSettings.Color\" \"Object.Appearance.BrushColor\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object\" \"Object.Appearance.Background\" \"Object.Appearance.Background.ImageSize\" \"Object.Appearance.Background.Margin\" \"Object.Appearance.Background.OutlineSettings\" \"Object.Appearance.Background.OutlineSettings.Color\" \"Object.Appearance.BrushColor\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Render Transform.RenderTransform\" "
 WBP_FaceCardPlayed_C="\"Object\" "
@@ -2447,7 +2447,7 @@ MaterialExpressionOneMinus="\"Object\" "
 SkeletalMeshActor="\"Object.SkeletalMeshActor.SkeletalMeshComponent.Object.Lighting.LightingChannels\" \"Object.SkeletalMeshActor.SkeletalMeshComponent.Object.Collision.BodyInstance\" "
 End Round_12="\"Struct\" "
 Update Unique Card Indicator_39="\"Struct\" "
-WBP_Pause_Menu1_C="\"Object\" "
+WBP_Pause_Menu1_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 WBP_Doubt_Call_C="\"Object\" "
 AnimSequence="\"Object\" "
 AnimSequenceBase="\"Object\" "
@@ -2507,7 +2507,22 @@ None=======
 None=======
 None=======
 None=======
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=AnimationBlueprintEditor
+RecentAssetEditors=SkeletonEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=PropertyEditor
+RecentAssetEditors=PropertyEditor
+RecentAssetEditors=PropertyEditor
+RecentAssetEditors=PropertyEditor
+RecentAssetEditors=PropertyEditor
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=TextureEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -2517,58 +2532,48 @@ RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=TextureEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
+OpenAssetsAtExit=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Difficulty_Selection.WBP_Darts_Difficulty_Selection
+OpenAssetsAtExit=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Mode_Selection.WBP_Darts_Mode_Selection
+OpenAssetsAtExit=/Game/UI/Non_Diegetic/Pause/WBP_Pause_Menu1.WBP_Pause_Menu1
+OpenAssetsAtExit=/Game/NPCs/BP_NPC.BP_NPC
+OpenAssetsAtExit=/Game/UI/Done_Assets/FINAL-FINAL-LOGO.FINAL-FINAL-LOGO
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UI/Non_Diegetic/Pause/WBP_Options_Pause_Menu
-MRUItem1=/Game/Shared_Game_Mechanics/Cards/BP_Card
-MRUItem2=/Game/NPCs/Models/Dante_V3/Materials/MM_Dante_Clothes
-MRUItem3=/Game/NPCs/Models/Dante_V3/Materials/MI_Dante_Skin
-MRUItem4=/Game/NPCs/Models/Dante_V3/Dante_V3
-MRUItem5=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_60_to_Zilia
-MRUItem6=/Game/Environment/Custom_Props/Textures/T_Prop_01_A2
-MRUItem7=/Game/Environment/Custom_Props/Materials/Plants
-MRUItem8=/Game/Environment/Custom_Props/Textures/T_Prop_01_A
-MRUItem9=/Game/Modes_Instances/Modes/GM_Bar
-MRUItem10=/Game/UI/Non_Diegetic/Pause/WBP_Pause_Menu1
-MRUItem11=/Game/Misc_Mechanics/Jukebox/BP_Jukebox
-MRUItem12=/Game/UI/Diegetic/Main_Games/IDI_Specific/WBP_Player_Cards_Round_IDI
-MRUItem13=/Game/UI/Diegetic/Main_Games/IDI_Specific/WBP_Unique_Card_Action
-MRUItem14=/Game/Player/BP_Player
-MRUItem15=/Game/NPCs/Dialogue_Specific/DT_Dialogue
-MRUItem16=/Game/Shared_Game_Mechanics/BPC_CurrentHand
-MRUItem17=/Game/Maps/Main_Level/Main_Level
-MRUItem18=/Game/Mini_Games/Darts/BP_Dart_Game_Manager
-MRUItem19=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem20=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
-MRUItem21=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
-MRUItem22=/Game/UI/Diegetic/Misc/Drink_Menu/WBP_Drink_Names
-MRUItem23=/Game/Misc_Mechanics/Drink_Board/BP_Drink_Board
-MRUItem24=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat
-MRUItem25=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/rag
-MRUItem26=/Game/UI/Diegetic/NPCs/WBP_NPC_Game_Availability_Indicator
-MRUItem27=/Game/UI/Diegetic/Misc/WBP_Jukebox_Track_Title
-MRUItem28=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat_Trigger_Start
-MRUItem29=/Game/NPCs/Animations/BP_Dialogue_Link
+MRUItem0=/Game/UI/Done_Assets/FINAL-FINAL-LOGO
+MRUItem1=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
+MRUItem2=/Game/NPCs/Models/Dante_v2/Dante_V2_Skeleton
+MRUItem3=/Game/UI/Done_Assets/CONTINUE_WHITE_TEXT_SKEW
+MRUItem4=/Game/Maps/Main_Level/Main_Level
+MRUItem5=/Game/NPCs/BP_NPC
+MRUItem6=/Game/UI/Done_Assets/BUTTON_RED_SKEW
+MRUItem7=/Game/UI/Done_Assets/QUIT_ORANGE_TEXT_SKEW
+MRUItem8=/Game/UI/Done_Assets/OPTIONS_RED_TEXT_SKEW
+MRUItem9=/Game/UI/Done_Assets/MAIN_MENU_WHITE_TEXT_SKEW
+MRUItem10=/Game/UI/Done_Assets/CONTINUE_ORANGE_TEXT_SKEW
+MRUItem11=/Game/UI/Non_Diegetic/Pause/WBP_Options_Pause_Menu
+MRUItem12=/Game/UI/Non_Diegetic/Pause/WBP_Pause_Menu1
+MRUItem13=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Mode_Selection
+MRUItem14=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Difficulty_Selection
+MRUItem15=/Game/UI/Done_Assets/501_ORANGE_TEXT
+MRUItem16=/Game/Shared_Game_Mechanics/Cards/BP_Card
+MRUItem17=/Game/NPCs/Models/Dante_V3/Materials/MM_Dante_Clothes
+MRUItem18=/Game/NPCs/Models/Dante_V3/Materials/MI_Dante_Skin
+MRUItem19=/Game/NPCs/Models/Dante_V3/Dante_V3
+MRUItem20=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_60_to_Zilia
+MRUItem21=/Game/Environment/Custom_Props/Textures/T_Prop_01_A2
+MRUItem22=/Game/Environment/Custom_Props/Materials/Plants
+MRUItem23=/Game/Environment/Custom_Props/Textures/T_Prop_01_A
+MRUItem24=/Game/Modes_Instances/Modes/GM_Bar
+MRUItem25=/Game/Misc_Mechanics/Jukebox/BP_Jukebox
+MRUItem26=/Game/UI/Diegetic/Main_Games/IDI_Specific/WBP_Player_Cards_Round_IDI
+MRUItem27=/Game/UI/Diegetic/Main_Games/IDI_Specific/WBP_Unique_Card_Action
+MRUItem28=/Game/Player/BP_Player
+MRUItem29=/Game/NPCs/Dialogue_Specific/DT_Dialogue
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -5867,6 +5872,7 @@ BP_Player_C.Drink Menu=True
 StaticMeshComponent.RayTracing=True
 StaticMeshComponent.TextureStreaming=True
 StaticMeshComponent.Replication=True
+Texture2D.Interchange =True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
@@ -6384,6 +6390,22 @@ None=======
 /Game/Environment/Custom_Props/Textures/T_Prop_01_A2.T_Prop_01_A2=1
 /Game/Shared_Game_Mechanics/Cards/Structs_DT/DT_Cards.DT_Cards=1
 /Game/NPCs/Animations/Assets/Dante/Dante_darts_throw.Dante_darts_throw=1
+/Game/UI/Done_Assets/301_ORANGE_TEXT.301_ORANGE_TEXT=1
+/Game/UI/Done_Assets/301_WHITE_TEXT.301_WHITE_TEXT=1
+/Game/UI/Done_Assets/BUTTON_BEIGE_SKEW.BUTTON_BEIGE_SKEW=1
+/Game/UI/Done_Assets/BUTTON_ORANGE_SKEW.BUTTON_ORANGE_SKEW=1
+/Game/UI/Done_Assets/BUTTON_RED_SKEW.BUTTON_RED_SKEW=1
+/Game/UI/Done_Assets/BUTTON_WHITE_SKEW.BUTTON_WHITE_SKEW=1
+/Game/UI/Done_Assets/CONTINUE_ORANGE_TEXT_SKEW.CONTINUE_ORANGE_TEXT_SKEW=1
+/Game/UI/Done_Assets/CONTINUE_WHITE_TEXT_SKEW.CONTINUE_WHITE_TEXT_SKEW=1
+/Game/UI/Done_Assets/EASY_ORANGE_TEXT.EASY_ORANGE_TEXT=1
+/Game/UI/Done_Assets/EASY_WHITE_TEXT.EASY_WHITE_TEXT=1
+/Game/UI/Done_Assets/MAIN_MENU_ORANGE_TEXT_SKEW.MAIN_MENU_ORANGE_TEXT_SKEW=1
+/Game/UI/Done_Assets/MAIN_MENU_WHITE_TEXT_SKEW.MAIN_MENU_WHITE_TEXT_SKEW=1
+/Game/UI/Done_Assets/OPTIONS_RED_TEXT_SKEW.OPTIONS_RED_TEXT_SKEW=1
+/Game/UI/Done_Assets/OPTIONS_WHITE_TEXT_SKEW.OPTIONS_WHITE_TEXT_SKEW=1
+/Game/UI/Done_Assets/QUIT_ORANGE_TEXT_SKEW.QUIT_ORANGE_TEXT_SKEW=1
+/Game/UI/Done_Assets/QUIT_WHITE_TEXT_SKEW.QUIT_WHITE_TEXT_SKEW=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -6821,7 +6843,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=BlueprintLog
 
 [PlacementMode]
 RecentlyPlaced=/Game/NPCs/Animations/Assets/Dante/Dante_darts_throw.Dante_darts_throw;
