Options and Pause Menu update for logo.
New logo assets added.
Changes to the options and pause menus for this new logo addition.

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -832,7 +832,7 @@ ContentBrowserTab3.ThumbnailSize=2
 ContentBrowserTab3.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Maps/Main_Level/Main_Level
+LastLevel=/Game/Maps/Test_Level/ThirdPersonMap
 
 [ModuleFileTracking]
 Project_7_Sins.TimeStamp=2025.03.22-16.28.40
@@ -1926,7 +1926,7 @@ ClothingSystemEditorInterface.LastCompileMethod=Unknown
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
-Object="\"Object\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object\" "
 None=======
 None=======
 None=======
@@ -2197,9 +2197,9 @@ SplineComponent="\"Object\" "
 BP_Rat_Screw_Game_Manager_C="\"Object\" "
 MegascansMaterialParentSettings="\"Object\" "
 W_Winner_C="\"Object\" "
-UserWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object\" \"Object.Render Transform.RenderTransform\" "
+UserWidget="\"Object\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
 StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" "
 StreamableRenderAsset="\"Object\" "
 AssetViewerSettings="\"Object\" "
@@ -2222,8 +2222,8 @@ IDI Decide_3="\"Struct\" "
 WidgetComponent="\"Object\" "
 WidgetComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 SizeBox="\"Object\" \"Object.Render Transform.RenderTransform\" "
-ContentWidget="\"Object\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object\" \"Object.Appearance.Background\" \"Object.Appearance.Background.ImageSize\" \"Object.Appearance.Background.Margin\" \"Object.Appearance.Background.OutlineSettings\" \"Object.Appearance.Background.OutlineSettings.Color\" \"Object.Appearance.BrushColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
+PanelWidget="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Render Transform.RenderTransform\" "
 WBP_FaceCardPlayed_C="\"Object\" "
@@ -2237,12 +2237,12 @@ PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
 SkeletalMesh="\"Object\" "
 SkinnedAsset="\"Object\" "
 LODInfoUILayout="\"Object\" "
-Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 WBP_Current_Turn_C="\"Object\" \"Object.Render Transform.RenderTransform\" "
 WBP_Current_Round_Card_Value_C="\"Object\" "
 WBP_Player_Cards_Round_IDI_C="\"Object\" "
 WBP_Card_Counter_C="\"Object\" "
-Overlay="\"Object\" \"Object.Render Transform.RenderTransform\" "
+Overlay="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 CanvasPanel="\"Object\" \"Object.Render Transform.RenderTransform\" "
 End Round="\"Struct.Player Scores\" "
 End Round_5="\"Struct\" "
@@ -2251,7 +2251,7 @@ BP_Auction_Game_Manager_C="\"Object\" "
 WBP_UnSelect_Card_C="\"Object\" \"Object.Render Transform.RenderTransform\" "
 Deal Shared Cards=
 Deal Shared Cards_8="\"Struct\" "
-Border="\"Object\" \"Object.Appearance.Background\" \"Object.Appearance.Background.ImageSize\" \"Object.Appearance.Background.Margin\" \"Object.Appearance.Background.OutlineSettings\" \"Object.Appearance.Background.OutlineSettings.Color\" \"Object.Appearance.BrushColor\" \"Object.Render Transform.RenderTransform\" "
+Border="\"Object\" \"Object.Appearance.Background\" \"Object.Appearance.Background.ImageSize\" \"Object.Appearance.Background.Margin\" \"Object.Appearance.Background.OutlineSettings\" \"Object.Appearance.Background.OutlineSettings.Color\" \"Object.Appearance.BrushColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
 Texture2D="\"Object\" "
 Texture="\"Object\" "
 MultiLineEditableTextBox="\"Object\" "
@@ -2304,7 +2304,7 @@ WBP_Pool_Prompts_C="\"Object\" \"Object.Render Transform.RenderTransform\" "
 WBP_Rat_Screw_Prompts_C="\"Object\" \"Object.Render Transform.RenderTransform\" "
 WBP_Button_Prompt_C="\"Object\" "
 WBP_Auction_Prompts_C="\"Object\" "
-WBP_Options_Pause_Menu_C="\"Object\" \"Object.Render Transform.RenderTransform\" "
+WBP_Options_Pause_Menu_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 WBP_Controls_Pause_Menu_C="\"Object\" "
 WBP_Pause_Menu_C="\"Object\" \"Object.Render Transform.RenderTransform\" "
 GridPanel="\"Object\" \"Object.Fill Rules.ColumnFill\" \"Object.Fill Rules.RowFill\" \"Object.Render Transform.RenderTransform\" "
@@ -2447,7 +2447,7 @@ MaterialExpressionOneMinus="\"Object\" "
 SkeletalMeshActor="\"Object.SkeletalMeshActor.SkeletalMeshComponent.Object.Lighting.LightingChannels\" \"Object.SkeletalMeshActor.SkeletalMeshComponent.Object.Collision.BodyInstance\" "
 End Round_12="\"Struct\" "
 Update Unique Card Indicator_39="\"Struct\" "
-WBP_Pause_Menu1_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+WBP_Pause_Menu1_C="\"Object\" "
 WBP_Doubt_Call_C="\"Object\" "
 AnimSequence="\"Object\" "
 AnimSequenceBase="\"Object\" "
@@ -2507,6 +2507,8 @@ None=======
 None=======
 None=======
 None=======
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=SkeletonEditor
@@ -2518,8 +2520,6 @@ RecentAssetEditors=PropertyEditor
 RecentAssetEditors=PropertyEditor
 RecentAssetEditors=PropertyEditor
 RecentAssetEditors=PropertyEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=TextureEditor
@@ -2537,43 +2537,41 @@ RecentAssetEditors=AnimationEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=TextureEditor
-OpenAssetsAtExit=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Difficulty_Selection.WBP_Darts_Difficulty_Selection
-OpenAssetsAtExit=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Mode_Selection.WBP_Darts_Mode_Selection
 OpenAssetsAtExit=/Game/UI/Non_Diegetic/Pause/WBP_Pause_Menu1.WBP_Pause_Menu1
-OpenAssetsAtExit=/Game/NPCs/BP_NPC.BP_NPC
-OpenAssetsAtExit=/Game/UI/Done_Assets/FINAL-FINAL-LOGO.FINAL-FINAL-LOGO
+OpenAssetsAtExit=/Game/UI/Non_Diegetic/Pause/WBP_Options_Pause_Menu.WBP_Options_Pause_Menu
+OpenAssetsAtExit=/Game/UI/Done_Assets/OPTIONS_WHITE_TEXT.OPTIONS_WHITE_TEXT
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UI/Done_Assets/FINAL-FINAL-LOGO
-MRUItem1=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
-MRUItem2=/Game/NPCs/Models/Dante_v2/Dante_V2_Skeleton
-MRUItem3=/Game/UI/Done_Assets/CONTINUE_WHITE_TEXT_SKEW
-MRUItem4=/Game/Maps/Main_Level/Main_Level
-MRUItem5=/Game/NPCs/BP_NPC
-MRUItem6=/Game/UI/Done_Assets/BUTTON_RED_SKEW
-MRUItem7=/Game/UI/Done_Assets/QUIT_ORANGE_TEXT_SKEW
-MRUItem8=/Game/UI/Done_Assets/OPTIONS_RED_TEXT_SKEW
-MRUItem9=/Game/UI/Done_Assets/MAIN_MENU_WHITE_TEXT_SKEW
-MRUItem10=/Game/UI/Done_Assets/CONTINUE_ORANGE_TEXT_SKEW
-MRUItem11=/Game/UI/Non_Diegetic/Pause/WBP_Options_Pause_Menu
-MRUItem12=/Game/UI/Non_Diegetic/Pause/WBP_Pause_Menu1
-MRUItem13=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Mode_Selection
-MRUItem14=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Difficulty_Selection
-MRUItem15=/Game/UI/Done_Assets/501_ORANGE_TEXT
-MRUItem16=/Game/Shared_Game_Mechanics/Cards/BP_Card
-MRUItem17=/Game/NPCs/Models/Dante_V3/Materials/MM_Dante_Clothes
-MRUItem18=/Game/NPCs/Models/Dante_V3/Materials/MI_Dante_Skin
-MRUItem19=/Game/NPCs/Models/Dante_V3/Dante_V3
-MRUItem20=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_60_to_Zilia
-MRUItem21=/Game/Environment/Custom_Props/Textures/T_Prop_01_A2
-MRUItem22=/Game/Environment/Custom_Props/Materials/Plants
-MRUItem23=/Game/Environment/Custom_Props/Textures/T_Prop_01_A
-MRUItem24=/Game/Modes_Instances/Modes/GM_Bar
-MRUItem25=/Game/Misc_Mechanics/Jukebox/BP_Jukebox
-MRUItem26=/Game/UI/Diegetic/Main_Games/IDI_Specific/WBP_Player_Cards_Round_IDI
-MRUItem27=/Game/UI/Diegetic/Main_Games/IDI_Specific/WBP_Unique_Card_Action
-MRUItem28=/Game/Player/BP_Player
-MRUItem29=/Game/NPCs/Dialogue_Specific/DT_Dialogue
+MRUItem0=/Game/UI/Done_Assets/OPTIONS_WHITE_TEXT
+MRUItem1=/Game/UI/Non_Diegetic/Pause/WBP_Options_Pause_Menu
+MRUItem2=/Game/UI/Non_Diegetic/Pause/WBP_Pause_Menu1
+MRUItem3=/Game/UI/Done_Assets/FINAL-FINAL-LOGO
+MRUItem4=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
+MRUItem5=/Game/NPCs/Models/Dante_v2/Dante_V2_Skeleton
+MRUItem6=/Game/UI/Done_Assets/CONTINUE_WHITE_TEXT_SKEW
+MRUItem7=/Game/Maps/Main_Level/Main_Level
+MRUItem8=/Game/NPCs/BP_NPC
+MRUItem9=/Game/UI/Done_Assets/BUTTON_RED_SKEW
+MRUItem10=/Game/UI/Done_Assets/QUIT_ORANGE_TEXT_SKEW
+MRUItem11=/Game/UI/Done_Assets/OPTIONS_RED_TEXT_SKEW
+MRUItem12=/Game/UI/Done_Assets/MAIN_MENU_WHITE_TEXT_SKEW
+MRUItem13=/Game/UI/Done_Assets/CONTINUE_ORANGE_TEXT_SKEW
+MRUItem14=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Mode_Selection
+MRUItem15=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Difficulty_Selection
+MRUItem16=/Game/UI/Done_Assets/501_ORANGE_TEXT
+MRUItem17=/Game/Shared_Game_Mechanics/Cards/BP_Card
+MRUItem18=/Game/NPCs/Models/Dante_V3/Materials/MM_Dante_Clothes
+MRUItem19=/Game/NPCs/Models/Dante_V3/Materials/MI_Dante_Skin
+MRUItem20=/Game/NPCs/Models/Dante_V3/Dante_V3
+MRUItem21=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_60_to_Zilia
+MRUItem22=/Game/Environment/Custom_Props/Textures/T_Prop_01_A2
+MRUItem23=/Game/Environment/Custom_Props/Materials/Plants
+MRUItem24=/Game/Environment/Custom_Props/Textures/T_Prop_01_A
+MRUItem25=/Game/Modes_Instances/Modes/GM_Bar
+MRUItem26=/Game/Misc_Mechanics/Jukebox/BP_Jukebox
+MRUItem27=/Game/UI/Diegetic/Main_Games/IDI_Specific/WBP_Player_Cards_Round_IDI
+MRUItem28=/Game/UI/Diegetic/Main_Games/IDI_Specific/WBP_Unique_Card_Action
+MRUItem29=/Game/Player/BP_Player
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -5211,6 +5209,7 @@ PostProcessVolume.HLOD=True
 PostProcessVolume.Networking=True
 PostProcessVolume.WorldPartition=True
 PostProcessVolume.Actor=True
+Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
