Updated materials on the united zilia model. Updated the NPC mesh choosing for the united zilia model. Another song added. Random song choice on begin play for jukebox now as well.
Jukebox now selects randomly on begin play from its map of songs to start playing rather than playing the same one every single time.
New entry in song titles for the new song added.

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -145,7 +145,7 @@ bAlwaysOpenAnimationAssetsInNewTab=False
 bMuteAudio=False
 bUseAudioAttenuation=True
 DefaultLocalAxesSelection=2
-DefaultBoneDrawSelection=5
+DefaultBoneDrawSelection=0
 DefaultBoneColor=(R=0.000000,G=0.000000,B=0.025000,A=1.000000)
 SelectedBoneColor=(R=0.200000,G=1.000000,B=0.200000,A=1.000000)
 AffectedBoneColor=(R=1.000000,G=1.000000,B=1.000000,A=1.000000)
@@ -319,6 +319,11 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Gl
 MaterialInstanceConstant=
 BrushComponent=SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 SkeletalMeshComponent=SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
+PropertyWrapper=PropertyWrapper.DefaultValueCategory.Songs
+BP_Jukebox_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs
+AudioComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs
+K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs
+SceneComponent=
 
 [ContentBrowser]
 SequenceBrowser.ThumbnailSize=2
@@ -410,7 +415,7 @@ ContentBrowserTab2.ThumbnailSize=2
 ContentBrowserTab2.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Maps/Main_Level/Main_Level
+LastLevel=/Game/Maps/Test_Level/ThirdPersonMap
 
 [ModuleFileTracking]
 Project_7_Sins.TimeStamp=2025.03.22-16.28.40
@@ -1491,7 +1496,7 @@ TextureEditor.LastCompileMethod=Unknown
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.LODInfo.BuildSettings\" \"Object.LODInfo.ReductionSettings\" "
+Object="\"Object\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -1702,10 +1707,19 @@ PreviewMaterial="\"Object\" "
 Material="\"Object\" "
 Texture2D="\"Object\" "
 Texture="\"Object\" "
+SoundCue="\"Object\" "
+SoundBase="\"Object\" "
+BP_Jukebox_C="\"Object.Songs\" \"Object.Songs.Songs\" "
+AudioComponent="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=SoundCueEditor
+RecentAssetEditors=SoundCueEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
@@ -1720,7 +1734,6 @@ RecentAssetEditors=EnumEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=SkeletalMeshEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1730,20 +1743,10 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=DataTableEditor
-OpenAssetsAtExit=/Game/NPCs/Models/Zilia/MI_Zilia_skin.MI_Zilia_skin
-OpenAssetsAtExit=/Game/NPCs/Models/Zilia/MI_Zilia_misc.MI_Zilia_misc
-OpenAssetsAtExit=/Game/NPCs/Models/Zilia/MI_Zilia_hair.MI_Zilia_hair
-OpenAssetsAtExit=/Game/NPCs/Models/Zilia/MI_Zilia_dress_test.MI_Zilia_dress_test
-OpenAssetsAtExit=/Game/NPCs/Models/Dante_V3/Materials/MI_Dante_Skin.MI_Dante_Skin
-OpenAssetsAtExit=/Game/NPCs/Models/Dante_V3/Materials/MM_Dante_Clothes.MM_Dante_Clothes
-OpenAssetsAtExit=/Game/NPCs/Models/Zilia/Textures/zilia_skin_BaseColor.zilia_skin_BaseColor
-OpenAssetsAtExit=/Game/NPCs/Models/Zilia/United_Model/Zilia_united.Zilia_united
+OpenAssetsAtExit=/Game/Misc_Mechanics/Jukebox/Enum_Jukebox_Song_Names.Enum_Jukebox_Song_Names
+OpenAssetsAtExit=/Game/Misc_Mechanics/Jukebox/BP_Jukebox.BP_Jukebox
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1759,36 +1762,36 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/Maps/Test_Level/ThirdPersonMap.ThirdPersonMap", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/NPCs/Models/Zilia/United_Model/Zilia_united
-MRUItem1=/Game/NPCs/Models/Zilia/Textures/zilia_skin_BaseColor
-MRUItem2=/Game/NPCs/Models/Dante_V3/Materials/MM_Dante_Clothes
-MRUItem3=/Game/NPCs/Models/Dante_V3/Materials/MI_Dante_Skin
-MRUItem4=/Game/NPCs/Models/Zilia/MI_Zilia_dress_test
-MRUItem5=/Game/NPCs/Models/Zilia/MI_Zilia_hair
-MRUItem6=/Game/NPCs/Models/Zilia/MI_Zilia_skin
-MRUItem7=/Game/NPCs/Models/Zilia/MI_Zilia_misc
-MRUItem8=/Game/NPCs/Models/Dante_v2/Dante_V2_Skeleton
-MRUItem9=/Game/NPCs/Enums/Enum_NPC_Anim_Accessories
-MRUItem10=/Game/NPCs/Enums/Enum_Character_Specific_Actions
-MRUItem11=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
-MRUItem12=/Game/NPCs/Animations/Assets/Dante/Dante_drink_making
-MRUItem13=/Game/NPCs/Models/Biel/Biel
-MRUItem14=/Game/NPCs/BP_NPC
-MRUItem15=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_base_pose
-MRUItem16=/Game/Misc_Mechanics/Leading_Cat/BP_Leading_Cat
-MRUItem17=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat
-MRUItem18=/Game/Misc_Mechanics/Shared_Cat_Assets/ABP_Tuna
-MRUItem19=/Game/Misc_Mechanics/Shared_Cat_Assets/Model/tuna_export_UE__2__Skeleton
-MRUItem20=/Game/Shared_Game_Mechanics/Cards/BPI_Card
-MRUItem21=/Game/Shared_Game_Mechanics/BPC_CurrentHand
-MRUItem22=/Game/Maps/Test_Level/ThirdPersonMap
-MRUItem23=/Game/UI/Diegetic/Misc/WBP_Jukebox
-MRUItem24=/Game/Misc_Mechanics/Jukebox/BP_Jukebox
-MRUItem25=/Game/Maps/Main_Level/Main_Level
-MRUItem26=/Game/Player/BP_Player
-MRUItem27=/Game/UI/Non_Diegetic/WBP_Game_Completed
-MRUItem28=/Game/Modes_Instances/Modes/GM_Bar
-MRUItem29=/Game/NPCs/Dialogue_Specific/DT_Dialogue
+MRUItem0=/Game/Misc_Mechanics/Jukebox/Enum_Jukebox_Song_Names
+MRUItem1=/Game/Misc_Mechanics/Jukebox/BP_Jukebox
+MRUItem2=/Game/SFX/Music/BG/Finished_Songs/sensmic_-_Winds_Of_Blue_Cue
+MRUItem3=/Game/SFX/Music/BG/Finished_Songs/7-Sins_-_The_Sax_Knows_Cue
+MRUItem4=/Game/NPCs/BP_NPC
+MRUItem5=/Game/NPCs/Models/Dante_V3/Dante_V3
+MRUItem6=/Game/NPCs/Models/Zilia/United_Model/Zilia_united
+MRUItem7=/Game/NPCs/Models/Zilia/Textures/zilia_skin_BaseColor
+MRUItem8=/Game/NPCs/Models/Dante_V3/Materials/MM_Dante_Clothes
+MRUItem9=/Game/NPCs/Models/Dante_V3/Materials/MI_Dante_Skin
+MRUItem10=/Game/NPCs/Models/Zilia/MI_Zilia_dress_test
+MRUItem11=/Game/NPCs/Models/Zilia/MI_Zilia_hair
+MRUItem12=/Game/NPCs/Models/Zilia/MI_Zilia_skin
+MRUItem13=/Game/NPCs/Models/Zilia/MI_Zilia_misc
+MRUItem14=/Game/NPCs/Models/Dante_v2/Dante_V2_Skeleton
+MRUItem15=/Game/NPCs/Enums/Enum_NPC_Anim_Accessories
+MRUItem16=/Game/NPCs/Enums/Enum_Character_Specific_Actions
+MRUItem17=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
+MRUItem18=/Game/NPCs/Animations/Assets/Dante/Dante_drink_making
+MRUItem19=/Game/NPCs/Models/Biel/Biel
+MRUItem20=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_base_pose
+MRUItem21=/Game/Misc_Mechanics/Leading_Cat/BP_Leading_Cat
+MRUItem22=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat
+MRUItem23=/Game/Misc_Mechanics/Shared_Cat_Assets/ABP_Tuna
+MRUItem24=/Game/Misc_Mechanics/Shared_Cat_Assets/Model/tuna_export_UE__2__Skeleton
+MRUItem25=/Game/Shared_Game_Mechanics/Cards/BPI_Card
+MRUItem26=/Game/Shared_Game_Mechanics/BPC_CurrentHand
+MRUItem27=/Game/Maps/Test_Level/ThirdPersonMap
+MRUItem28=/Game/UI/Diegetic/Misc/WBP_Jukebox
+MRUItem29=/Game/Maps/Main_Level/Main_Level
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -2705,11 +2708,40 @@ PreviewMaterial.Previewing=True
 PreviewMaterial.ImportSettings=True
 Texture2D.LevelOfDetail=True
 Texture2D.Compression=True
-Texture2D.Interchange =True
+Texture2D.Interchange=True
 Texture2D.Texture=True
 Texture2D.Adjustments=True
 Texture2D.File Path=True
 Texture2D.Compositing=True
+SoundCue.Sound=True
+SoundCue.Attenuation=True
+SoundCue.Memory=True
+SoundCue.Effects=True
+SoundCue.Voice Management=True
+SoundCue.Developer=True
+BP_Jukebox_C.Tick=True
+BP_Jukebox_C.Player Interaction=True
+BP_Jukebox_C.Fade Times=True
+BP_Jukebox_C.References=True
+BP_Jukebox_C.WorldPartition=True
+BP_Jukebox_C.Events=True
+AudioComponent.Variable=True
+AudioComponent.TransformCommon=True
+AudioComponent.Sockets=True
+AudioComponent.Sound=True
+AudioComponent.Parameters=True
+AudioComponent.Attenuation=True
+AudioComponent.Attachment=True
+AudioComponent.Analysis=True
+AudioComponent.Concurrency=True
+AudioComponent.ComponentTick=True
+AudioComponent.Subtitles=True
+AudioComponent.Randomization=True
+AudioComponent.Tags=True
+AudioComponent.ComponentReplication=True
+AudioComponent.Activation=True
+AudioComponent.Cooking=True
+AudioComponent.Events=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2903,6 +2935,9 @@ LastLogListing=PIE
 /Game/NPCs/Models/Dante_V3/Materials/MI_Dante_Skin.MI_Dante_Skin=1
 /Game/NPCs/Models/Dante_V3/Materials/MM_Dante_Clothes.MM_Dante_Clothes=1
 /Game/NPCs/Models/Zilia/Textures/zilia_skin_BaseColor.zilia_skin_BaseColor=1
+/Game/NPCs/Models/Dante_V3/Dante_V3.Dante_V3=1
+/Game/SFX/Music/BG/Finished_Songs/7-Sins_-_The_Sax_Knows_Cue.7-Sins_-_The_Sax_Knows_Cue=1
+/Game/SFX/Music/BG/Finished_Songs/sensmic_-_Winds_Of_Blue_Cue.sensmic_-_Winds_Of_Blue_Cue=1
 
 [DetailCategoriesAdvanced]
 WorldSettings.PrecomputedVisibility=False
@@ -2911,6 +2946,7 @@ FbxImportUI.Animation=True
 FbxImportUI.Material=True
 FbxImportUI.Mesh=True
 BP_NPC_C.Animation=True
+UserDefinedEnum.Enumerators=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
