--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -309,21 +309,30 @@ TemplateSequenceEditorSettings=EnhancedInputDeveloperSettings.Modifier Default V
 UdpMessagingSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 WmfMediaSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails
-WorldPartitionRuntimeSpatialHash=WorldSettings.GameMode.SelectedGameModeDetails
+WorldPartitionRuntimeSpatialHash=
 SkeletalMeshActor=SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 CapsuleComponent=SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 SkeletalMesh=SkeletalMesh.LOD0.LOD Info,SkeletalMesh.LOD0.SkeletalMeshOptimizationSettings,SkeletalMesh.LOD0.MeshBuildSettings,SkeletalMesh.Clothing.MeshClothingAssets,SkeletalMesh.ImportSettings.Mesh,SkeletalMesh.ImportSettings.Material,SkeletalMesh.ImportSettings.Miscellaneous,SkeletalMesh.ImportSettings.Transform,SkeletalMesh.ImportSettings.File Path
 LODInfoUILayout=
-BP_NPC_C=SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
+BP_NPC_C=
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values
 MaterialInstanceConstant=
 BrushComponent=SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
-SkeletalMeshComponent=SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
-PropertyWrapper=PropertyWrapper.DefaultValueCategory.Songs
+SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
+PropertyWrapper=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 BP_Jukebox_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs
 AudioComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs
 SceneComponent=
+ABP_NPC_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
+K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
+K2Node_Variable=
+MulticastInlineDelegatePropertyWrapper=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
+ToolMenu=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
+K2Node_CustomEvent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
+K2Node=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
+EdGraph=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
+K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 
 [ContentBrowser]
 SequenceBrowser.ThumbnailSize=2
@@ -375,7 +384,7 @@ ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/NPCs/Models/Zilia/United_Model
+ContentBrowserTab1.SelectedPaths=/Game/NPCs
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -1697,9 +1706,9 @@ BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BrushComponent="\"Object\" "
-BP_NPC_C="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" "
-Character="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" "
-Pawn="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" "
+BP_NPC_C=
+Character=
+Pawn=
 SpotLight=
 Light=
 RectLight=
@@ -1711,14 +1720,29 @@ SoundCue="\"Object\" "
 SoundBase="\"Object\" "
 BP_Jukebox_C="\"Object.Songs\" \"Object.Songs.Songs\" "
 AudioComponent="\"Object\" "
+EditorNotifyObject="\"Object\" "
+EditorAnimBaseObj="\"Object\" "
+AnimGraphNode_UseCachedPose="\"Object\" "
+AnimGraphNode_SaveCachedPose="\"Object\" "
+ToolMenu="\"Object\" "
+ToolMenuBase="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=SoundCueEditor
-RecentAssetEditors=SoundCueEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationBlueprintEditor
+RecentAssetEditors=EnumEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=SoundCueEditor
+RecentAssetEditors=SoundCueEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=TextureEditor
@@ -1731,22 +1755,11 @@ RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=EnumEditor
-RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=AnimationBlueprintEditor
-RecentAssetEditors=SkeletonEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=
-RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/Misc_Mechanics/Jukebox/Enum_Jukebox_Song_Names.Enum_Jukebox_Song_Names
-OpenAssetsAtExit=/Game/Misc_Mechanics/Jukebox/BP_Jukebox.BP_Jukebox
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1762,36 +1775,36 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/Maps/Test_Level/ThirdPersonMap.ThirdPersonMap", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Misc_Mechanics/Jukebox/Enum_Jukebox_Song_Names
-MRUItem1=/Game/Misc_Mechanics/Jukebox/BP_Jukebox
-MRUItem2=/Game/SFX/Music/BG/Finished_Songs/sensmic_-_Winds_Of_Blue_Cue
-MRUItem3=/Game/SFX/Music/BG/Finished_Songs/7-Sins_-_The_Sax_Knows_Cue
-MRUItem4=/Game/NPCs/BP_NPC
-MRUItem5=/Game/NPCs/Models/Dante_V3/Dante_V3
-MRUItem6=/Game/NPCs/Models/Zilia/United_Model/Zilia_united
-MRUItem7=/Game/NPCs/Models/Zilia/Textures/zilia_skin_BaseColor
-MRUItem8=/Game/NPCs/Models/Dante_V3/Materials/MM_Dante_Clothes
-MRUItem9=/Game/NPCs/Models/Dante_V3/Materials/MI_Dante_Skin
-MRUItem10=/Game/NPCs/Models/Zilia/MI_Zilia_dress_test
-MRUItem11=/Game/NPCs/Models/Zilia/MI_Zilia_hair
-MRUItem12=/Game/NPCs/Models/Zilia/MI_Zilia_skin
-MRUItem13=/Game/NPCs/Models/Zilia/MI_Zilia_misc
-MRUItem14=/Game/NPCs/Models/Dante_v2/Dante_V2_Skeleton
-MRUItem15=/Game/NPCs/Enums/Enum_NPC_Anim_Accessories
-MRUItem16=/Game/NPCs/Enums/Enum_Character_Specific_Actions
-MRUItem17=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
-MRUItem18=/Game/NPCs/Animations/Assets/Dante/Dante_drink_making
-MRUItem19=/Game/NPCs/Models/Biel/Biel
-MRUItem20=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_base_pose
-MRUItem21=/Game/Misc_Mechanics/Leading_Cat/BP_Leading_Cat
-MRUItem22=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat
-MRUItem23=/Game/Misc_Mechanics/Shared_Cat_Assets/ABP_Tuna
-MRUItem24=/Game/Misc_Mechanics/Shared_Cat_Assets/Model/tuna_export_UE__2__Skeleton
-MRUItem25=/Game/Shared_Game_Mechanics/Cards/BPI_Card
-MRUItem26=/Game/Shared_Game_Mechanics/BPC_CurrentHand
-MRUItem27=/Game/Maps/Test_Level/ThirdPersonMap
-MRUItem28=/Game/UI/Diegetic/Misc/WBP_Jukebox
-MRUItem29=/Game/Maps/Main_Level/Main_Level
+MRUItem0=/Game/NPCs/BP_NPC
+MRUItem1=/Game/Mini_Games/Darts/BP_Dart_Game_Manager
+MRUItem2=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem3=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
+MRUItem4=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem5=/Game/NPCs/Animations/Assets/Dante/Dante_wiping_the_counter
+MRUItem6=/Game/NPCs/Animations/Assets/Dante/Dante_smoking
+MRUItem7=/Game/NPCs/Animations/Assets/Dante/Dante_darts_throw
+MRUItem8=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
+MRUItem9=/Game/Misc_Mechanics/Jukebox/Enum_Jukebox_Song_Names
+MRUItem10=/Game/Misc_Mechanics/Jukebox/BP_Jukebox
+MRUItem11=/Game/SFX/Music/BG/Finished_Songs/sensmic_-_Winds_Of_Blue_Cue
+MRUItem12=/Game/SFX/Music/BG/Finished_Songs/7-Sins_-_The_Sax_Knows_Cue
+MRUItem13=/Game/NPCs/Models/Dante_V3/Dante_V3
+MRUItem14=/Game/NPCs/Models/Zilia/United_Model/Zilia_united
+MRUItem15=/Game/NPCs/Models/Zilia/Textures/zilia_skin_BaseColor
+MRUItem16=/Game/NPCs/Models/Dante_V3/Materials/MM_Dante_Clothes
+MRUItem17=/Game/NPCs/Models/Dante_V3/Materials/MI_Dante_Skin
+MRUItem18=/Game/NPCs/Models/Zilia/MI_Zilia_dress_test
+MRUItem19=/Game/NPCs/Models/Zilia/MI_Zilia_hair
+MRUItem20=/Game/NPCs/Models/Zilia/MI_Zilia_skin
+MRUItem21=/Game/NPCs/Models/Zilia/MI_Zilia_misc
+MRUItem22=/Game/NPCs/Models/Dante_v2/Dante_V2_Skeleton
+MRUItem23=/Game/NPCs/Enums/Enum_NPC_Anim_Accessories
+MRUItem24=/Game/NPCs/Enums/Enum_Character_Specific_Actions
+MRUItem25=/Game/NPCs/Animations/Assets/Dante/Dante_drink_making
+MRUItem26=/Game/NPCs/Models/Biel/Biel
+MRUItem27=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_base_pose
+MRUItem28=/Game/Misc_Mechanics/Leading_Cat/BP_Leading_Cat
+MRUItem29=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -2742,6 +2755,81 @@ AudioComponent.ComponentReplication=True
 AudioComponent.Activation=True
 AudioComponent.Cooking=True
 AudioComponent.Events=True
+EditorNotifyObject.AnimNotify=True
+EditorNotifyObject.Trigger Settings=True
+EditorNotifyObject.Category=True
+AnimGraphNode_UseCachedPose.Functions=True
+AnimGraphNode_UseCachedPose.Tag=True
+AnimGraphNode_SaveCachedPose.GraphNodeDetail=True
+AnimGraphNode_SaveCachedPose.CachedPose=True
+AnimGraphNode_SaveCachedPose.Functions=True
+AnimGraphNode_SaveCachedPose.Tag=True
+BP_I_Doubt_It_Game_Manager_C.Tick=True
+BP_I_Doubt_It_Game_Manager_C.Doubt=True
+BP_I_Doubt_It_Game_Manager_C.Cards=True
+BP_I_Doubt_It_Game_Manager_C.Players + Positions=True
+BP_I_Doubt_It_Game_Manager_C.Unique=True
+BP_I_Doubt_It_Game_Manager_C.Next Turn=True
+BP_I_Doubt_It_Game_Manager_C.Widgets=True
+BP_I_Doubt_It_Game_Manager_C.Checks=True
+BP_I_Doubt_It_Game_Manager_C.Fade Timers=True
+BP_I_Doubt_It_Game_Manager_C.Replication=True
+BP_I_Doubt_It_Game_Manager_C.Rendering=True
+BP_I_Doubt_It_Game_Manager_C.Collision=True
+BP_I_Doubt_It_Game_Manager_C.Actor=True
+BP_I_Doubt_It_Game_Manager_C.Input=True
+BP_I_Doubt_It_Game_Manager_C.HLOD=True
+BP_I_Doubt_It_Game_Manager_C.Physics=True
+BP_I_Doubt_It_Game_Manager_C.WorldPartition=True
+BP_I_Doubt_It_Game_Manager_C.Events=True
+BP_Auction_Game_Manager_C.Tick=True
+BP_Auction_Game_Manager_C.Default=True
+BP_Auction_Game_Manager_C.References=True
+BP_Auction_Game_Manager_C.Players + Positions=True
+BP_Auction_Game_Manager_C.Won Cards=True
+BP_Auction_Game_Manager_C.Widgets=True
+BP_Auction_Game_Manager_C.Unique Card=True
+BP_Auction_Game_Manager_C.Round=True
+BP_Auction_Game_Manager_C.Replication=True
+BP_Auction_Game_Manager_C.Rendering=True
+BP_Auction_Game_Manager_C.Collision=True
+BP_Auction_Game_Manager_C.Actor=True
+BP_Auction_Game_Manager_C.Input=True
+BP_Auction_Game_Manager_C.HLOD=True
+BP_Auction_Game_Manager_C.Physics=True
+BP_Auction_Game_Manager_C.WorldPartition=True
+BP_Auction_Game_Manager_C.Events=True
+BP_Rat_Screw_Game_Manager_C.Tick=True
+BP_Rat_Screw_Game_Manager_C.Default=True
+BP_Rat_Screw_Game_Manager_C.Widgets=True
+BP_Rat_Screw_Game_Manager_C.Positions and Rotations=True
+BP_Rat_Screw_Game_Manager_C.Replication=True
+BP_Rat_Screw_Game_Manager_C.Rendering=True
+BP_Rat_Screw_Game_Manager_C.Collision=True
+BP_Rat_Screw_Game_Manager_C.Actor=True
+BP_Rat_Screw_Game_Manager_C.Input=True
+BP_Rat_Screw_Game_Manager_C.HLOD=True
+BP_Rat_Screw_Game_Manager_C.Physics=True
+BP_Rat_Screw_Game_Manager_C.WorldPartition=True
+BP_Rat_Screw_Game_Manager_C.Events=True
+BP_Dart_Game_Manager_C.Tick=True
+BP_Dart_Game_Manager_C.Default=True
+BP_Dart_Game_Manager_C.Checks=True
+BP_Dart_Game_Manager_C.Fade Timings=True
+BP_Dart_Game_Manager_C.Round=True
+BP_Dart_Game_Manager_C.Player Specific=True
+BP_Dart_Game_Manager_C.Replication=True
+BP_Dart_Game_Manager_C.Rendering=True
+BP_Dart_Game_Manager_C.Collision=True
+BP_Dart_Game_Manager_C.Actor=True
+BP_Dart_Game_Manager_C.Input=True
+BP_Dart_Game_Manager_C.HLOD=True
+BP_Dart_Game_Manager_C.Physics=True
+BP_Dart_Game_Manager_C.WorldPartition=True
+BP_Dart_Game_Manager_C.Events=True
+MulticastInlineDelegatePropertyWrapper.DelegateInputs=True
+MulticastInlineDelegatePropertyWrapper.Variable=True
+MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2938,6 +3026,10 @@ LastLogListing=PIE
 /Game/NPCs/Models/Dante_V3/Dante_V3.Dante_V3=1
 /Game/SFX/Music/BG/Finished_Songs/7-Sins_-_The_Sax_Knows_Cue.7-Sins_-_The_Sax_Knows_Cue=1
 /Game/SFX/Music/BG/Finished_Songs/sensmic_-_Winds_Of_Blue_Cue.sensmic_-_Winds_Of_Blue_Cue=1
+/Game/Misc_Mechanics/Jukebox/Enum_Jukebox_Song_Names.Enum_Jukebox_Song_Names=1
+/Game/NPCs/Animations/Assets/Dante/Dante_smoking.Dante_smoking=1
+/Game/NPCs/Animations/Assets/Dante/Dante_wiping_the_counter.Dante_wiping_the_counter=1
+/Game/Mini_Games/Darts/BP_Dart_Game_Manager.BP_Dart_Game_Manager=1
 
 [DetailCategoriesAdvanced]
 WorldSettings.PrecomputedVisibility=False
@@ -2947,6 +3039,7 @@ FbxImportUI.Material=True
 FbxImportUI.Mesh=True
 BP_NPC_C.Animation=True
 UserDefinedEnum.Enumerators=True
+K2Node_CustomEvent.Graph=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -3297,9 +3390,9 @@ bMaterialQualityUsed[3]=0
 PrimType=1
 
 [RootWindow]
-ScreenPosition=X=127.200 Y=16.000
-WindowSize=X=1281.600 Y=904.000
-InitiallyMaximized=False
+ScreenPosition=X=127.000 Y=16.000
+WindowSize=X=1282.000 Y=904.000
+InitiallyMaximized=True
 
 [Directories2]
 UNR=../../../../Users/ASUS/Documents/GitHub/7-Sins/Project_7_Sins/Content/Maps/Main_Level
@@ -3317,5 +3410,6 @@ Project=C:/UE_5.3/
 
 [Python]
 LastDirectory=
+RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
