--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -309,12 +309,12 @@ TemplateSequenceEditorSettings=EnhancedInputDeveloperSettings.Modifier Default V
 UdpMessagingSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 WmfMediaSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails
-WorldPartitionRuntimeSpatialHash=
+WorldPartitionRuntimeSpatialHash=WorldSettings.GameMode.SelectedGameModeDetails
 SkeletalMeshActor=SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 CapsuleComponent=SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 SkeletalMesh=SkeletalMesh.LOD0.LOD Info,SkeletalMesh.LOD0.SkeletalMeshOptimizationSettings,SkeletalMesh.LOD0.MeshBuildSettings,SkeletalMesh.Clothing.MeshClothingAssets,SkeletalMesh.ImportSettings.Mesh,SkeletalMesh.ImportSettings.Material,SkeletalMesh.ImportSettings.Miscellaneous,SkeletalMesh.ImportSettings.Transform,SkeletalMesh.ImportSettings.File Path
 LODInfoUILayout=
-BP_NPC_C=
+BP_NPC_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values
 MaterialInstanceConstant=
 BrushComponent=SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
@@ -333,6 +333,10 @@ K2Node_CustomEvent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet
 K2Node=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 EdGraph=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
+SplineComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
+BP_I_Doubt_It_Game_Manager_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
+BP_Auction_Game_Manager_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
+BP_Rat_Screw_Game_Manager_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 
 [ContentBrowser]
 SequenceBrowser.ThumbnailSize=2
@@ -424,7 +428,7 @@ ContentBrowserTab2.ThumbnailSize=2
 ContentBrowserTab2.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Maps/Test_Level/ThirdPersonMap
+LastLevel=/Game/Maps/Main_Level/Main_Level
 
 [ModuleFileTracking]
 Project_7_Sins.TimeStamp=2025.03.22-16.28.40
@@ -1505,7 +1509,7 @@ TextureEditor.LastCompileMethod=Unknown
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object=
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -1647,8 +1651,8 @@ SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
-SceneComponent="\"Object\" "
-ActorComponent="\"Object\" "
+SceneComponent=
+ActorComponent=
 WBP_Drink_Names_C="\"Object\" "
 UserWidget="\"Object\" "
 Widget="\"Object\" "
@@ -1726,14 +1730,22 @@ AnimGraphNode_UseCachedPose="\"Object\" "
 AnimGraphNode_SaveCachedPose="\"Object\" "
 ToolMenu="\"Object\" "
 ToolMenuBase="\"Object\" "
+Actor="\"Object\" "
+SplineComponent="\"Object\" "
+StaticMeshComponent="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=
+RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
@@ -1743,7 +1755,6 @@ RecentAssetEditors=EnumEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=SoundCueEditor
 RecentAssetEditors=SoundCueEditor
-RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
@@ -1756,10 +1767,12 @@ RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=AnimationEditor
-RecentAssetEditors=SkeletalMeshEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
+OpenAssetsAtExit=/Game/NPCs/BP_NPC.BP_NPC
+OpenAssetsAtExit=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager.BP_I_Doubt_It_Game_Manager
+OpenAssetsAtExit=/Game/Modes_Instances/Modes/GM_Bar.GM_Bar
+OpenAssetsAtExit=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager.BP_Auction_Game_Manager
+OpenAssetsAtExit=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager.BP_Rat_Screw_Game_Manager
+OpenAssetsAtExit=/Game/Mini_Games/Darts/BP_Dart_Game_Manager.BP_Dart_Game_Manager
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1775,36 +1788,36 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/Maps/Test_Level/ThirdPersonMap.ThirdPersonMap", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/NPCs/BP_NPC
-MRUItem1=/Game/Mini_Games/Darts/BP_Dart_Game_Manager
-MRUItem2=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem3=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
-MRUItem4=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
-MRUItem5=/Game/NPCs/Animations/Assets/Dante/Dante_wiping_the_counter
-MRUItem6=/Game/NPCs/Animations/Assets/Dante/Dante_smoking
-MRUItem7=/Game/NPCs/Animations/Assets/Dante/Dante_darts_throw
-MRUItem8=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
-MRUItem9=/Game/Misc_Mechanics/Jukebox/Enum_Jukebox_Song_Names
-MRUItem10=/Game/Misc_Mechanics/Jukebox/BP_Jukebox
-MRUItem11=/Game/SFX/Music/BG/Finished_Songs/sensmic_-_Winds_Of_Blue_Cue
-MRUItem12=/Game/SFX/Music/BG/Finished_Songs/7-Sins_-_The_Sax_Knows_Cue
-MRUItem13=/Game/NPCs/Models/Dante_V3/Dante_V3
-MRUItem14=/Game/NPCs/Models/Zilia/United_Model/Zilia_united
-MRUItem15=/Game/NPCs/Models/Zilia/Textures/zilia_skin_BaseColor
-MRUItem16=/Game/NPCs/Models/Dante_V3/Materials/MM_Dante_Clothes
-MRUItem17=/Game/NPCs/Models/Dante_V3/Materials/MI_Dante_Skin
-MRUItem18=/Game/NPCs/Models/Zilia/MI_Zilia_dress_test
-MRUItem19=/Game/NPCs/Models/Zilia/MI_Zilia_hair
-MRUItem20=/Game/NPCs/Models/Zilia/MI_Zilia_skin
-MRUItem21=/Game/NPCs/Models/Zilia/MI_Zilia_misc
-MRUItem22=/Game/NPCs/Models/Dante_v2/Dante_V2_Skeleton
-MRUItem23=/Game/NPCs/Enums/Enum_NPC_Anim_Accessories
-MRUItem24=/Game/NPCs/Enums/Enum_Character_Specific_Actions
-MRUItem25=/Game/NPCs/Animations/Assets/Dante/Dante_drink_making
-MRUItem26=/Game/NPCs/Models/Biel/Biel
-MRUItem27=/Game/Misc_Mechanics/Shared_Cat_Assets/Animations/Tuna_base_pose
-MRUItem28=/Game/Misc_Mechanics/Leading_Cat/BP_Leading_Cat
-MRUItem29=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat
+MRUItem0=/Game/Mini_Games/Darts/BP_Dart_Game_Manager
+MRUItem1=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem2=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
+MRUItem3=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem4=/Game/Modes_Instances/Modes/GM_Bar
+MRUItem5=/Game/Maps/Main_Level/Main_Level
+MRUItem6=/Game/NPCs/Models/Zilia/zilia
+MRUItem7=/Game/NPCs/Models/Zilia/United_Model/Zilia_united
+MRUItem8=/Game/NPCs/BP_NPC
+MRUItem9=/Game/NPCs/Models/Biel/Biel
+MRUItem10=/Game/NPCs/Animations/Assets/Dante/Dante_wiping_the_counter
+MRUItem11=/Game/NPCs/Animations/Assets/Dante/Dante_smoking
+MRUItem12=/Game/NPCs/Animations/Assets/Dante/Dante_darts_throw
+MRUItem13=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
+MRUItem14=/Game/Misc_Mechanics/Jukebox/Enum_Jukebox_Song_Names
+MRUItem15=/Game/Misc_Mechanics/Jukebox/BP_Jukebox
+MRUItem16=/Game/SFX/Music/BG/Finished_Songs/sensmic_-_Winds_Of_Blue_Cue
+MRUItem17=/Game/SFX/Music/BG/Finished_Songs/7-Sins_-_The_Sax_Knows_Cue
+MRUItem18=/Game/NPCs/Models/Dante_V3/Dante_V3
+MRUItem19=/Game/NPCs/Models/Zilia/Textures/zilia_skin_BaseColor
+MRUItem20=/Game/NPCs/Models/Dante_V3/Materials/MM_Dante_Clothes
+MRUItem21=/Game/NPCs/Models/Dante_V3/Materials/MI_Dante_Skin
+MRUItem22=/Game/NPCs/Models/Zilia/MI_Zilia_dress_test
+MRUItem23=/Game/NPCs/Models/Zilia/MI_Zilia_hair
+MRUItem24=/Game/NPCs/Models/Zilia/MI_Zilia_skin
+MRUItem25=/Game/NPCs/Models/Zilia/MI_Zilia_misc
+MRUItem26=/Game/NPCs/Models/Dante_v2/Dante_V2_Skeleton
+MRUItem27=/Game/NPCs/Enums/Enum_NPC_Anim_Accessories
+MRUItem28=/Game/NPCs/Enums/Enum_Character_Specific_Actions
+MRUItem29=/Game/NPCs/Animations/Assets/Dante/Dante_drink_making
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -2830,6 +2843,50 @@ BP_Dart_Game_Manager_C.Events=True
 MulticastInlineDelegatePropertyWrapper.DelegateInputs=True
 MulticastInlineDelegatePropertyWrapper.Variable=True
 MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
+SkeletalMeshClothBuildParams.Basic=True
+SkeletalMeshClothBuildParams.Collision=True
+SkeletalMeshClothBuildParams.Target=True
+Actor.TransformCommon=True
+Actor.Rendering=True
+Actor.Replication=True
+Actor.Collision=True
+Actor.HLOD=True
+Actor.Physics=True
+Actor.Networking=True
+Actor.Actor=True
+SplineComponent.Variable=True
+SplineComponent.TransformCommon=True
+SplineComponent.Sockets=True
+SplineComponent.Selected Points=True
+SplineComponent.Spline=False
+SplineComponent.Editor=True
+SplineComponent.ComponentTick=True
+SplineComponent.HLOD=True
+SplineComponent.PathTracing=True
+SplineComponent.Navigation=True
+SplineComponent.Tags=True
+SplineComponent.ComponentReplication=True
+SplineComponent.Activation=True
+SplineComponent.Cooking=True
+SplineComponent.Events=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.PathTracing=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2991,7 +3048,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [AssetEditorToolkitTabLocation]
 /Game/Mini_Games/Pool/BP_PoolBall.BP_PoolBall=1
@@ -3014,7 +3071,7 @@ LastLogListing=PIE
 /Game/NPCs/Models/Biel/Biel.Biel=1
 /Game/NPCs/Models/Biel/Biel_UE_Export___1_.Biel_UE_Export___1_=1
 /Game/NPCs/Enums/Enum_NPC_Anim_Accessories.Enum_NPC_Anim_Accessories=1
-/Game/NPCs/Models/Zilia/United_Model/Zilia_united.Zilia_united=1
+/Game/NPCs/Models/Zilia/United_Model/Zilia_united.Zilia_united=0
 /Game/NPCs/Models/Dante_v2/Dante_V2_Skeleton.Dante_V2_Skeleton=1
 /Game/NPCs/Models/Zilia/MI_Zilia_misc.MI_Zilia_misc=1
 /Game/NPCs/Models/Zilia/MI_Zilia_skin.MI_Zilia_skin=1
@@ -3030,6 +3087,7 @@ LastLogListing=PIE
 /Game/NPCs/Animations/Assets/Dante/Dante_smoking.Dante_smoking=1
 /Game/NPCs/Animations/Assets/Dante/Dante_wiping_the_counter.Dante_wiping_the_counter=1
 /Game/Mini_Games/Darts/BP_Dart_Game_Manager.BP_Dart_Game_Manager=1
+/Game/NPCs/Models/Zilia/zilia_rig_UE.zilia_rig_UE=1
 
 [DetailCategoriesAdvanced]
 WorldSettings.PrecomputedVisibility=False
@@ -3055,7 +3113,7 @@ LodDistance6=0.000000
 LodDistance7=0.000000
 MinimumLodNumber=0
 LodNumber=0
-bImportAnimations=True
+bImportAnimations=False
 bImportMaterials=True
 bImportTextures=True
 
